Refactorización y creación de nuevas versiones